--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_screen_cap">ScreenCap</string>
+    <string name="title_activity_getres">Getres</string>
+    <string name="title_activity_text_shadow">TextShadowActivity</string>
 
 </resources>
