--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_text_shadow">TextShadowActivity</string>
     <string name="title_activity_custlist">Custlist</string>
     <string name="title_activity_main_list">MainList</string>
+    <string name="title_activity_drage_view">DrageView</string>
 
 </resources>
