--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_main_list">MainList</string>
     <string name="title_activity_drage_view">DrageView</string>
     <string name="title_activity_progressnotification">progressnotification</string>
+    <string name="title_activity_notify_sample">NotifySample</string>
 
 </resources>
