--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,17 @@
     <string name="title_activity_drage_view">DrageView</string>
     <string name="title_activity_progressnotification">progressnotification</string>
     <string name="title_activity_notify_sample">NotifySample</string>
+    <string name="title_activity_cust_notify">CustNotify</string>
+
+    <string name="notificationtitle">Android Notification Tutorial</string>
+<string name="notificationtext">Notification Text</string>
+<string name="notificationticker">Notification Ticker</string>
+<string name="customnotificationtitle">Android Notification Tutorial</string>
+<string name="customnotificationtext">Custom Notification Text</string>
+<string name="customnotificationticker">Custom Notification Ticker</string>
+<string name="lbltitle">"Title : "</string>
+<string name="lbltext">"Text : "</string>
+<string name="notification">Notification</string>
+<string name="customnotification">Custom Notification</string>
 
 </resources>
